--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>William - Desenvolvedor Full Stack</title>
+    <title>Gustavo da Silva Barros - Desenvolvedor Full Stack</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="header">
+        <h1>LOBO</h1>
         <nav>
             <ul class="header-menu">
                 <li><a href="#experiencia">Experiência</a></li>
@@ -18,18 +22,19 @@
     </header>
 
     <main class="introducao">
-        <img src="" alt="">
+        <img src="./img/perfil.jpg" alt="">
         <div>
             <h1>Gustavo da Silva Barros</h1>
-            <p>Cidade e estado - São João de Meriti, Rio de Janeiro/Rj</p>
-            <p>Idade - 20 anos</p>
-            <p>Programador Full Stack</p>
+            <p>👨‍💻 Desenvolvedor Full Stack com experiência em JavaScript, Angular, Node.js, Python e SQL. Apaixonado por tecnologia, aprendizado contínuo e criação de aplicações performáticas e escaláveis. Busco oportunidades para desenvolver soluções inovadoras utilizando as melhores práticas de desenvolvimento</p>
+            <p><strong>✅ Desenvolvedor Full Stack | Desenvolvedor Web |</strong></p>
         </div>
     </main>
+
+    
     <section id="experiencia" class="experiencia">
         <h2 class="subtitulo">Experiência</h2>
         <div>
-            <p class="experciencia-texto">Programador Full Stack com experiência sólida em desenvolvimento de software. Especializado em tecnologias Java, JavaScript, Angular e SpringBoot, com habilidades avançadas em SQL. Proficiente na metodologia ágil Scrum, garantindo entregas eficientes e de alta qualidade. Experiência comprovada em desenvolvimento de aplicações web robustas e escaláveis, focando na experiência do usuário e na otimização de performance. Pronto para enfrentar desafios e contribuir positivamente em projetos inovadores. Aberto a novas oportunidades e colaborações no campo da tecnologia.</p>
+            <p class="experciencia-texto">
         </div>
     </section>
     
